--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.89.2",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
