--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
+    "negotiator": "^1.0.0",
     "next": "14.2.3",
     "next-intl": "^4.3.4",
     "react": "18.2.0",
