--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -18,6 +18,7 @@
     "next-intl": "^4.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^11.0.5",
     "sass": "^1.89.2",
     "swr": "^2.3.3"
   },
