--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -26,6 +26,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/js-cookie": "^3.0.6",
+    "@types/negotiator": "^0.6.4",
     "@types/node": "^20",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
