BE: move /users to admin/users, add alias for prisma

--- a/flatform-backend/tsconfig.build.json
+++ b/flatform-backend/tsconfig.build.json
@@ -5,6 +5,7 @@
     "outDir": "./dist",
     "baseUrl": "./src",
     "paths": {
+      "@/prisma/*": ["../prisma/*"],
       "@/*": ["*"]
     }
   }
