--- a/flatform-backend/tsconfig.json
+++ b/flatform-backend/tsconfig.json
@@ -11,6 +11,7 @@
     "outDir": "./dist",
     "baseUrl": "./src",
     "paths": {
+      "@/prisma/*": ["../prisma/*"],
       "@/*": ["*"]
     },
     "incremental": true,
