--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "grapesjs": "^0.22.12",
@@ -22,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-toastify": "^11.0.5",
     "sass": "^1.89.2",
-    "swr": "^2.3.3"
+    "swr": "^2.3.3",
+    "zod": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
