--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -15,8 +15,10 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "grapesjs": "^0.22.12",
+    "grapesjs-plugin-export": "^1.0.12",
     "grapesjs-preset-newsletter": "^1.0.2",
     "js-cookie": "^3.0.5",
+    "juice": "^11.0.1",
     "lucide-react": "^0.525.0",
     "negotiator": "^1.0.0",
     "next": "14.2.3",
