--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^11.0.5",
     "sass": "^1.89.2",
     "swr": "^2.3.3",
+    "ulid": "^3.0.1",
     "zod": "^4.1.4"
   },
   "devDependencies": {
