--- a/flatform-backend/package.json
+++ b/flatform-backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/serve-static": "5.0.3",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.10.1",
@@ -43,8 +44,11 @@
     "mysql2": "^3.14.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "puppeteer": "^24.17.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "serve-static": "2.2.0",
+    "sharp": "^0.34.3",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25",
     "ulid": "^3.0.1"
@@ -63,6 +67,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
+    "@types/serve-static": "^1.15.8",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
