--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -18,6 +18,7 @@
     "grapesjs-plugin-export": "^1.0.12",
     "grapesjs-preset-newsletter": "^1.0.2",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
     "juice": "^11.0.1",
     "lucide-react": "^0.525.0",
     "negotiator": "^1.0.0",
