--- a/flatform-backend/package.json
+++ b/flatform-backend/package.json
@@ -49,6 +49,7 @@
     "rxjs": "^7.8.1",
     "serve-static": "2.2.0",
     "sharp": "^0.34.3",
+    "slugify": "^1.6.6",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25",
     "ulid": "^3.0.1"
