--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-toastify": "^11.0.5",
     "sass": "^1.89.2",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "swr": "^2.3.3",
     "ulid": "^3.0.1",
