--- a/flatform-backend/.env.example
+++ b/flatform-backend/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URL="mysql://root:@localhost:3306/flatform_db"
 JWT_SECRET="!@#$%^&*()1234567890!@#$%^&*()12"
+PUBLIC_BASE_URL=http://localhost:3001
+STORAGE_DIR=storage
