--- a/flatform-frontend/package.json
+++ b/flatform-frontend/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
+    "cheerio": "^1.1.2",
     "grapesjs": "^0.22.12",
     "grapesjs-plugin-export": "^1.0.12",
     "grapesjs-preset-newsletter": "^1.0.2",
